--- a/src/components/Options/Options.module.scss
+++ b/src/components/Options/Options.module.scss
@@ -75,6 +75,11 @@
   justify-content: center;
   gap: 6px;
 
+  img {
+    width: 40px;
+    height: 40px;
+  }
+
   &:hover {
     @extend .selectedOption;
   }
@@ -87,6 +92,11 @@
   @include _480 {
     height: 86px;
     width: 86px;
+
+    img {
+      width: 25px;
+      height: 25px;
+    }
   }
 }
 
@@ -96,6 +106,10 @@
   font-weight: 600;
   text-wrap: wrap;
   text-align: center;
+
+  @include _480 {
+    font-size: 10px;
+  }
 }
 
 .selectedOption {
@@ -126,7 +140,11 @@
 }
 
 .cardEmoji {
-  font-size: 52px;
+  font-size: 68px;
+
+  @include _680 {
+    font-size: 52px;
+  }
 }
 
 .cardText {
